# mfusg

./: README.md  meson.build  pixi.toml
.github/workflows/: ci.yml  compilers.yml
src/: meson.build  mfusg.f
